# python-countries

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: run-tests.yml
src/countries/: __init__.py  core.py  country.py  dataloader.py
src/country_database/: __init__.py  core.py  dataloader.py  generics.py
tests/: helper.py  test_core.py  test_country.py  test_dataloader.py  test_generics.py
tests/custom/flag/: en.tsv
tests/custom/name/: en.tsv  fr.tsv
tests/custom/national_flower/: en.tsv  zh.tsv
