[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pdm]
version = { source = 'file', path = "src/countries/__version__.py" }

[tool.pdm.build]
package-dir = "src"
includes = ["src/countries/**/*.py", "src/countries/database"]
excludes = ["src/countries/database/.git"]
source-includes = ["tests/**/*.py"]

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = ["pytest", "pytest-cov>=3.0.0"]

[project]
name = "python-countries"
description = "Country information database. Including names, capitals, currencies, etc."
authors = [{ name = "Ggicci", email = "ggicci.t@gmail.com" }]
dependencies = []
requires-python = ">=3.6"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[project.urls]
HomePage = "https://github.com/ggicci/python-countries"
"Source Code" = "https://github.com/ggicci/python-countries"
"Bug Tracker" = "https://github.com/ggicci/python-countries/issues"

[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
